--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="Resume_Kiran.pdf" class="btn"><i class="fa fa-download"></i>Resume</a>
+                                            <a href="Kiran_Resume.pdf" class="btn"><i class="fa fa-download"></i>Resume</a>
                                             <a href="#" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
