--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <a href="https://www.facebook.com/profile.php?id=100053302174534" class="btn hiro-me" style=" padding: 7px 15px; font-size: 30px; margin: 10px;"><i class='bx bxl-facebook'></i></a>
                                 <a href="https://www.instagram.com/kiran_ptl29/" class="btn hiro-me" style=" padding: 7px 15px; font-size: 30px; margin: 10px;"><i class='bx bxl-instagram' ></i></a>
                                 <a href="https://www.linkedin.com/in/kiran-patel-3b4342203/" class="btn hiro-me" style=" padding: 7px 15px; font-size: 30px; margin: 10px;"><i class='bx bxl-linkedin'></i></a>
-                                <a href="https://github.com/krp290902" class="btn hiro-me" style=" padding: 7px 15px; font-size: 30px; margin: 10px;"><i class='bx bxl-github' ></i></a>
+                                <a href="https://github.com/krp290902?tab=repositories" class="btn hiro-me" style=" padding: 7px 15px; font-size: 30px; margin: 10px;"><i class='bx bxl-github' ></i></a>
                               </div>
                         </div>
                         <div class="home-img padd-15">
