--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <ul class="nav">
-                <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#home"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About me</a></li>
                 <li><a href="#skills"><i class="fa fa-list"></i>Skills</a></li>
                 <li><a href="#projects"><i class="fa fa-briefcase"></i>Projects</a></li>
