--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-globe-europe"></i></div>
                         <h4>Website</h4>
-                        <p>www.domain.com</p>
+                        <p><a href="https://krp290902.github.io/Kiran_Patel/">/Kiran_Patel/</a></p>
                     </div>
                     <!--============contact item end==========-->
                 </div>
