--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-envelope"></i></div>
                         <h4>Email</h4>
-                        <p>krp290902@gmail.com</p>
+                        <p><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=krp290902@gmail.com" target="_blank">krp290902@gmail.com</a></p>
                     </div>
                     <!--============contact item end==========-->
                     <!--============contact item start==========-->
