--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-phone"></i></div>
                         <h4>Call Us On</h4>
-                        <p>9313245275</p>
+                        <p><a href="tel:9313245275">9313245275</a></p>
                     </div>
                     <!--============contact item end==========-->
                     <!--============contact item start==========-->
