--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
                     <!--============contact item start==========-->
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-                        <h4>Location</h4>
-                        <p>Navsari,Gujrat</p>
+                        <h4>Location</h4> 
+                        <p><a href="https://www.google.com/maps/place/Mohanpur,+Gujarat+396472/@20.8522209,72.9442321,15.58z/data=!4m13!1m7!3m6!1s0x3be0f102ae17665d:0xb7cc8e15204c8650!2sMohanpur,+Gujarat+396472!3b1!8m2!3d20.8549788!4d72.9467948!3m4!1s0x3be0f102ae17665d:0xb7cc8e15204c8650!8m2!3d20.8549788!4d72.9467948">Navsari,Gujrat</a></p>
                     </div>
                     <!--============contact item end==========-->
                     <!--============contact item start==========-->
