--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <!-- Boxicon css-->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
+    <!------------------->
+    <link rel="icon" href="images/logo.png" type="images/icon">
+    
 </head>
 <body>
     <!--===============Main Container Start====================-->
