--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     <div class="project-item padd-15">
                         <div class="project-item-inner">
                             <div class="project-img">
-                                <a href="https://krp290902.github.io/OPEXX/"><img src="images/projecti/opexx.jpg" alt=""></a>
+                                <a href="https://kiranr2992.github.io/OPEXX/"><img src="images/projecti/opexx.jpg" alt=""></a>
                             </div>
                         </div>
                     </div>
