--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                     <div class="project-item padd-15">
                         <div class="project-item-inner">
                             <div class="project-img">
-                                <a href="https://krp290902.github.io/FW2kiran/"><img src="images/projecti/Framework.png" alt=""></a>
+                                <a href="https://kiranr2992.github.io/FW2kiran/"><img src="images/projecti/Framework.png" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -403,7 +403,7 @@
                     <div class="project-item padd-15">
                         <div class="project-item-inner">
                             <div class="project-img">
-                                <a href="https://krp290902.github.io/AlumniSystem/"><img src="images/projecti/AlumniMSys.jpg" alt="">
+                                <a href="https://kiranr2992.github.io/AlumniSystem/"><img src="images/projecti/AlumniMSys.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -412,7 +412,7 @@
                     <div class="project-item padd-15">
                         <div class="project-item-inner">
                             <div class="project-img">
-                                <a href="https://krp290902.github.io/TutorPoint1/"><img src="images/projecti/tutorpoint.jpeg" alt=""></a>
+                                <a href="https://kiranr2992.github.io/TutorPoint1/"><img src="images/projecti/tutorpoint.jpeg" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -421,7 +421,7 @@
                     <div class="project-item padd-15">
                         <div class="project-item-inner">
                             <div class="project-img">
-                                <a href="https://krp290902.github.io/pu-materials/"><img src="images/projecti/PU.jpeg" alt=""></a>
+                                <a href="https://kiranr2992.github.io/pu-materials/"><img src="images/projecti/PU.jpeg" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -430,7 +430,7 @@
                     <div class="project-item padd-15">
                         <div class="project-item-inner">
                             <div class="project-img">
-                                <a href="https://krp290902.github.io/Project-1/">
+                                <a href="https://kiranr2992.github.io/Project-1/">
                                     <img src="images/projecti/internet banking.jpg" alt="">
                                 </a>
                             </div>
