--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                             <p>Age : <span>19</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Email : <span>krp290902@gmail.com</span></p>
+                                            <p>Email : <span>kiranr2992@gmail.com</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Degree : <span>B.Tech IT</span></p>
@@ -471,14 +471,14 @@
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-envelope"></i></div>
                         <h4>Email</h4>
-                        <p><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=krp290902@gmail.com" target="_blank">krp290902@gmail.com</a></p>
+                        <p><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=kiranr2992@gmail.com" target="_blank">kiranr2992@gmail.com</a></p>
                     </div>
                     <!--============contact item end==========-->
                     <!--============contact item start==========-->
                     <div class="contact-info-item padd-15">
                         <div class="icon"><i class="fa fa-globe-europe"></i></div>
                         <h4>Website</h4>
-                        <p><a href="https://krp290902.github.io/Kiran_Patel/">/Kiran_Patel/</a></p>
+                        <p><a href="https://kiranr2992.github.io/Kiran_Patel/">/Kiran_Patel/</a></p>
                     </div>
                     <!--============contact item end==========-->
                 </div>
